--- a/whiz/requirements.txt
+++ b/whiz/requirements.txt
@@ -9,13 +9,16 @@ dj-database-url==0.5.0
 Django==3.2.3
 django-allauth==0.44.0
 django-email-verification==0.0.2
+django-heroku==0.3.1
 gunicorn==20.1.0
 idna==2.10
 oauthlib==3.1.0
 Pillow==8.2.0
+psycopg2==2.8.6
 pycodestyle==2.7.0
 pycparser==2.20
 PyJWT==2.1.0
+python-decouple==3.4
 python-social-auth==0.3.6
 python3-openid==3.2.0
 pytz==2021.1
